# my-method

./: .gitignore  NOTICE.md  README.md  requirements.txt  test.py  train.py
external_data/: README.md
orsdet/: aux_fct.py  data_gen.py  pipeline.py  run_context.py
orsdet/angle/src/orsdet_angle/: __init__.py  angle_codec.py  angle_loss.py  angle_weight_variants.py  cianna_bridge.py  cianna_forward_eval.py  cianna_targets.py  metrics.py  tables.py
orsdet/candidates/src/orsdet_candidates/: __init__.py  data.py  decode.py  runtime.py
orsdet/detector/scripts/: env_guard.py  nms_detector.py  post_detector.py  pred_detector.py  train_detector.py
orsdet/detector/src/orsdet_detector/: __init__.py  data.py  decode.py  hard_group_sampler.py  runtime.py
orsdet/eval/scripts/: evaluate.py  predict.py
orsdet/eval/src/orsdet_eval/: __init__.py  hbb_post.py  obb_post.py  runtime.py  score.py
orsdet/flux_head/scripts/: apply_flux_head.py  build_flux_head.py  dat_package.py  flux_common.py  flux_head_core.py  inspect_dat_package.py  score_utils.py  stage9_core.py  train_pipeline_internal.py
orsdet/geometry/src/orsdet_geometry/: __init__.py  bootstrap.py  geometry.py  interface.py  targets.py
orsdet/nms/src/orsdet_nms/: __init__.py  nms.py  runtime.py
orsdet/resources/: TrainingSet_perscut.txt
orsdet/target_source/src/orsdet_targets/: __init__.py  bootstrap.py  geometry.py  interface.py  targets.py
src/: CMakeLists.txt  LICENSE.md  MODIFICATIONS.md  NOTICE.md  pyproject.toml  setup.py
src/src/: activ_functions.c  auxil.c  chgate_layer.c  conv_layer.c  dataset.c  defs.h  dense_layer.c  lrn_layer.c  main.c  network.c  norm_layer.c  pool_layer.c  prototypes.h  python_module.c  python_module_setup.py  structs.h  vars.c  weights_initializers.c
src/src/blas/: blas_conv_layer.c  blas_dense_layer.c
src/src/cuda/: cuda_activ_functions.cu  cuda_auxil.cu  cuda_chgate_layer.cu  cuda_conv_layer.cu  cuda_dense_layer.cu  cuda_lrn_layer.cu  cuda_norm_layer.cu  cuda_pool_layer.cu
src/src/naiv/: naiv_conv_layer.c  naiv_dense_layer.c  naiv_norm_layer.c  naiv_pool_layer.c
